tried adding javafx shit to pom